--- a/OpenMenuEditorWPF/OpenMenuEditorWPF.csproj
+++ b/OpenMenuEditorWPF/OpenMenuEditorWPF.csproj
@@ -61,6 +61,7 @@
     <Compile Include="MainViewModel.cs" />
     <Compile Include="Tests\FromToXMLTests.cs" />
     <Compile Include="Tests\FTPTests.cs" />
+    <Compile Include="WinSparkleWrapper.cs" />
     <Page Include="MainView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -106,7 +107,11 @@
   <ItemGroup>
     <Resource Include="TestData\alacarte_menu.xml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="WinSparkle.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
