--- a/OpenMenuEditorWPF/OpenMenuEditorWPF.csproj
+++ b/OpenMenuEditorWPF/OpenMenuEditorWPF.csproj
@@ -111,6 +111,7 @@
     </EmbeddedResource>
     <None Include="NLog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
