make ftp a setting, use new logininfo

--- a/OpenMenuEditorWPF/OpenMenuEditorWPF.csproj
+++ b/OpenMenuEditorWPF/OpenMenuEditorWPF.csproj
@@ -118,6 +118,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="NLog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
