--- a/OpenMenuEditorWPF/Properties/Settings.settings
+++ b/OpenMenuEditorWPF/Properties/Settings.settings
@@ -1,7 +1,18 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="uri:settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="OpenMenuEditorWPF.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="ftpUser" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">menueditor</Value>
+    </Setting>
+    <Setting Name="ftpPassword" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">4ov0rxi2t5ut</Value>
+    </Setting>
+    <Setting Name="ftpServer" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">fringshaus.com</Value>
+    </Setting>
+    <Setting Name="ftpDir" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">.</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
