--- a/OpenMenuEditorWPF/app.config
+++ b/OpenMenuEditorWPF/app.config
@@ -8,13 +8,13 @@
     <applicationSettings>
         <OpenMenuEditorWPF.Properties.Settings>
             <setting name="ftpUser" serializeAs="String">
-                <value>menueditor</value>
+                <value>menueditor@fringshaus.com</value>
             </setting>
             <setting name="ftpPassword" serializeAs="String">
                 <value>4ov0rxi2t5ut</value>
             </setting>
             <setting name="ftpServer" serializeAs="String">
-                <value>fringshaus.com</value>
+                <value>ftp.fringshaus.com</value>
             </setting>
             <setting name="ftpDir" serializeAs="String">
                 <value>.</value>
