fix new wix version, change ftp pass

--- a/OpenMenuEditorWPF/app.config
+++ b/OpenMenuEditorWPF/app.config
@@ -11,7 +11,7 @@
                 <value>menueditor@fringshaus.com</value>
             </setting>
             <setting name="ftpPassword" serializeAs="String">
-                <value>4ov0rxi2t5ut</value>
+                <value>4cthcGKJBzoEE6BFamsyMd</value>
             </setting>
             <setting name="ftpServer" serializeAs="String">
                 <value>ftp.fringshaus.com</value>
